helm/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
  namespace: devhub
  labels:
    app: 
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: devhub
spec:
  - host: 
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: 
              port:
                number:
